<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?cardBackground"
    android:fadeScrollbars="false"
    android:fillViewport="true">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:clipChildren="false"
      android:clipToPadding="false"
      android:orientation="vertical"
      android:padding="@dimen/margin_base">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="@dimen/about_logo"
        android:layout_height="@dimen/about_logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_base"
        android:layout_marginBottom="@dimen/margin_half"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logo"
        app:tint="?attr/colorLogo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_half"
        android:selectAllOnFocus="true"
        android:textAppearance="@style/MwmTextAppearance.Body3"
        android:textIsSelectable="true"
        tools:text="2021.10.15-15-Google" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_base"
        android:text="@string/about_headline"
        android:textAlignment="center"
        android:textAppearance="@style/MwmTextAppearance.Headline"
        android:textColor="?android:textColorPrimary" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_half"
        android:text="@string/about_proposition_1"
        android:textAppearance="@style/MwmTextAppearance.Body1"
        android:textColor="?android:textColorPrimary" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_half"
        android:text="@string/about_proposition_2"
        android:textAppearance="@style/MwmTextAppearance.Body1"
        android:textColor="?android:textColorPrimary" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_half"
        android:text="@string/about_proposition_3"
        android:textAppearance="@style/MwmTextAppearance.Body1"
        android:textColor="?android:textColorPrimary" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_half"
        android:fontFamily="@string/robotoRegular"
        android:text="@string/about_developed_by_enthusiasts"
        android:textAppearance="@style/MwmTextAppearance.Body2"
        android:textColor="?android:textColorPrimary"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <com.google.android.material.imageview.ShapeableImageView
          android:id="@+id/osm_logo"
          android:layout_width="@dimen/osm_logo"
          android:layout_height="@dimen/osm_logo"
          android:layout_gravity="center"
          android:contentDescription="@string/openstreetmap"
          app:srcCompat="@drawable/ic_openstreetmap_color"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <com.google.android.material.textview.MaterialTextView
          android:id="@+id/osm_presentation"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/margin_half"
          android:fontFamily="@string/robotoRegular"
          android:includeFontPadding="false"
          android:text="@string/osm_presentation"
          android:textAppearance="@style/MwmTextAppearance.Body2"
          android:textColor="?android:textColorPrimary"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/osm_logo"
          app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/donate"
        style="@style/MwmWidget.Button.Accent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_base"
        android:fontFamily="@string/robotoMedium"
        android:padding="@dimen/margin_quarter"
        android:text="@string/donate" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/report"
        style="@style/MwmWidget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_base"
        android:fontFamily="@string/robotoMedium"
        android:text="@string/report_a_bug"
        android:textColor="@color/text_dark" />

    <com.google.android.material.textview.MaterialTextView
      android:id="@+id/faq"
      style="@style/MwmWidget.TextView.Item"
      android:text="@string/faq"
      app:drawableStartCompat="@drawable/ic_question_mark" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/support_us"
        style="@style/MwmWidget.TextView.Item"
        android:text="@string/how_to_support_us"
        app:drawableStartCompat="@drawable/ic_donate" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/news"
        style="@style/MwmWidget.TextView.Item"
        android:text="@string/news"
        app:drawableStartCompat="@drawable/ic_news" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/rate"
        style="@style/MwmWidget.TextView.Item"
        android:text="@string/rate_the_app"
        app:drawableStartCompat="@drawable/ic_rate" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/telegram"
        style="@style/MwmWidget.TextView.Item"
        android:text="@string/telegram"
        app:drawableStartCompat="@drawable/ic_telegram" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/github"
        style="@style/MwmWidget.TextView.Item"
        android:text="@string/github"
        app:drawableStartCompat="@drawable/ic_github" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/web"
        style="@style/MwmWidget.TextView.Item"
        android:text="@string/website"
        app:drawableStartCompat="@drawable/ic_website" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/email"
        style="@style/MwmWidget.TextView.Item"
        android:text="@string/email"
        app:drawableStartCompat="@drawable/ic_email" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/matrix"
        style="@style/MwmWidget.TextView.Item"
        android:text="@string/matrix"
        app:drawableStartCompat="@drawable/ic_matrix" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mastodon"
        style="@style/MwmWidget.TextView.Item"
        android:text="@string/mastodon"
        app:drawableStartCompat="@drawable/ic_mastodon" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/facebook"
        style="@style/MwmWidget.TextView.Item"
        android:text="@string/facebook"
        app:drawableStartCompat="@drawable/ic_facebook" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/twitter"
        style="@style/MwmWidget.TextView.Item"
        android:text="@string/twitter"
        app:drawableStartCompat="@drawable/ic_twitterx" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/instagram"
        style="@style/MwmWidget.TextView.Item"
        android:text="@string/instagram"
        app:drawableStartCompat="@drawable/ic_instagram" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/openstreetmap"
        style="@style/MwmWidget.TextView.Item"
        android:text="@string/openstreetmap"
        app:drawableStartCompat="@drawable/ic_openstreetmap" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/margin_quarter"
        android:layout_marginTop="@dimen/margin_quarter"
        android:background="?dividerHorizontal" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/privacy_policy"
        style="@style/MwmWidget.TextView.Item"
        android:text="@string/privacy_policy" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/term_of_use_link"
        style="@style/MwmWidget.TextView.Item"
        android:text="@string/terms_of_use" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/copyright"
        style="@style/MwmWidget.TextView.Item"
        android:text="@string/copyright" />

  </LinearLayout>
</ScrollView>
