<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:clipChildren="false"
  android:clipToPadding="false"
  android:theme="?navButtonsThemeRect">
  <FrameLayout
    android:id="@+id/search_frame"
    android:layout_width="@dimen/nav_search_options_width"
    android:layout_height="48dp"
    android:layout_alignParentStart="true"
    android:background="?searchLayoutBackground"
    android:visibility="invisible"
    tools:visibility="visible">
    <HorizontalScrollView
      android:id="@+id/search_options_scroll"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:saveEnabled="false"
      android:scrollbars="none">
      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/margin_quarter">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
          android:id="@+id/search_fuel"
          style="@style/MwmWidget.MapButton.Search"
          android:layout_gravity="center_vertical"
          android:layout_marginStart="50dp"
          android:contentDescription="@string/category_fuel"
          app:srcCompat="@drawable/ic_routing_fuel_on" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
          android:id="@+id/search_parking"
          style="@style/MwmWidget.MapButton.Search"
          android:layout_gravity="center_vertical"
          android:layout_marginStart="@dimen/margin_half"
          android:contentDescription="@string/category_parking"
          app:srcCompat="@drawable/ic_routing_parking_on" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
          android:id="@+id/search_eat"
          style="@style/MwmWidget.MapButton.Search"
          android:layout_gravity="center_vertical"
          android:layout_marginStart="@dimen/margin_half"
          android:contentDescription="@string/category_eat"
          app:srcCompat="@drawable/ic_routing_eat_on" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
          android:id="@+id/search_food"
          style="@style/MwmWidget.MapButton.Search"
          android:layout_gravity="center_vertical"
          android:layout_marginStart="@dimen/margin_half"
          android:contentDescription="@string/category_shopping"
          app:srcCompat="@drawable/ic_routing_food_on" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
          android:id="@+id/search_atm"
          style="@style/MwmWidget.MapButton.Search"
          android:layout_gravity="center_vertical"
          android:layout_marginStart="@dimen/margin_half"
          android:contentDescription="@string/category_atm"
          app:srcCompat="@drawable/ic_routing_atm_on" />
      </LinearLayout>
    </HorizontalScrollView>
  </FrameLayout>
</RelativeLayout>
