<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar_point_chooser"
    style="@style/MwmWidget.ToolbarStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="end|center_vertical"
    android:theme="@style/MwmWidget.ToolbarTheme">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/editor_add_select_location"
        android:layout_margin="@dimen/margin_half"
        android:textAppearance="@style/MwmTextAppearance.Toolbar.Title"/>
      <TextView
        android:id="@+id/done"
        android:text="@string/done"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:paddingHorizontal="@dimen/margin_base"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_gravity="end"
        android:textAppearance="@style/MwmTextAppearance.Body1"
        android:contentDescription="@string/done" />

    </LinearLayout>

  </androidx.appcompat.widget.Toolbar>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?panel"
    android:padding="@dimen/margin_base"
    android:text="@string/editor_focus_map_on_location"/>

</LinearLayout>
