<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="android.widget.LinearLayout">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/osm_username_container"
        style="@style/MwmWidget.Editor.CustomTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_half"
        android:textColorHint="?android:textColorSecondary"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/osm_username"
            style="@style/MwmWidget.Editor.FieldLayout.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/email_or_username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/osm_password_container"
        style="@style/MwmWidget.Editor.CustomTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_base"
        android:textColorHint="?android:textColorSecondary"
        app:endIconMode="password_toggle"
        app:endIconTint="?android:textColorSecondary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/osm_password"
            style="@style/MwmWidget.Editor.FieldLayout.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_base"
        android:gravity="center"
        android:textColor="@color/base_red"
        android:visibility="gone"
        android:importantForAccessibility="yes"
        android:accessibilityLiveRegion="polite"
        tools:text="Errors message"
        tools:visibility="visible" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_base">

        <Button
            android:id="@+id/login"
            style="@style/MwmWidget.Button.Accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_osm"
            android:textAppearance="@style/MwmTextAppearance.Body2.Light" />

        <ProgressBar
            android:id="@+id/osm_login_progress"
            android:layout_width="@dimen/editor_auth_btn_height"
            android:layout_height="@dimen/editor_auth_btn_height"
            android:layout_gravity="center"
            android:elevation="@dimen/design_fab_elevation"
            android:visibility="gone" />
    </FrameLayout>

    <Button
        android:id="@+id/lost_password"
        style="@style/MwmWidget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:background="?clickableBackground"
        android:padding="@dimen/margin_half"
        android:text="@string/forgot_password"
        android:textAppearance="@style/MwmTextAppearance.Body3" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_base"
        android:layout_marginBottom="@dimen/margin_base" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@string/robotoRegular"
        android:text="@string/no_osm_account"
        android:textAppearance="@style/MwmTextAppearance.Body2"
        android:textColor="?android:textColorPrimary" />

    <Button
        android:id="@+id/register"
        style="@style/MwmWidget.Button.Accent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_base"
        android:background="@drawable/button_editor_light"
        android:fontFamily="@string/robotoMedium"
        android:padding="@dimen/margin_quarter"
        android:text="@string/register_at_openstreetmap"
        android:textAppearance="@style/MwmTextAppearance.Body2"
        android:textColor="@color/text_dark" />

</merge>