<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="wrap_content"
  android:layout_height="match_parent">

  <LinearLayout
    android:id="@+id/block_auth"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:minWidth="280dp"
    android:orientation="vertical"
    android:padding="@dimen/margin_base_plus">

    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/img_auth"/>

    <TextView
      android:id="@+id/first_osm_edit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/margin_base_plus"
      android:layout_marginTop="20dp"
      android:fontFamily="@string/robotoMedium"
      android:gravity="center"
      android:text="@string/login_to_make_edits_visible"
      android:textColor="?android:textColorPrimary"
      android:textSize="@dimen/text_size_toolbar"
      tools:ignore="UnusedAttribute"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/margin_half_plus"
      android:orientation="horizontal"
      tools:ignore="ButtonStyle">
      <ImageButton
        android:id="@+id/login_facebook"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editor_auth_btn_height"
        android:background="@drawable/com_facebook_button_background"
        android:src="@drawable/ic_login_fb"/>
    </LinearLayout>

    <Button
      android:id="@+id/login_osm"
      style="@style/MwmWidget.Button.Accent"
      android:layout_width="match_parent"
      android:layout_height="@dimen/editor_auth_btn_height"
      android:fontFamily="@string/robotoMedium"
      android:text="@string/openstreetmap"
      android:textAllCaps="false"
      android:textAppearance="@style/MwmTextAppearance.Body1.Light"
      tools:targetApi="jelly_bean"/>

    <Button
      android:id="@+id/register"
      style="@style/MwmWidget.Button.Accent"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_base"
      android:background="@drawable/button_editor_light"
      android:fontFamily="@string/robotoMedium"
      android:padding="@dimen/margin_quarter"
      android:text="@string/register_at_openstreetmap"
      android:textAppearance="@style/MwmTextAppearance.Body1"
      android:textColor="@color/text_dark"
      tools:targetApi="jelly_bean"/>

  </LinearLayout>

</ScrollView>
